--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,6 +21,7 @@ requirements:
     - python >=3.8
     - pip
     - setuptools
+    - hatchling
   run:
     - arxiv >=1.0.0
     - platformdirs >=4.0.0
